--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,11 @@
 *.exe
 *.out
 *.app
+
+# Visual studio files
+SampleIRC/.vs/*
+
+# Compilation output
+SampleIRC/Client/x64
+SampleIRC/Server/x64
+SampleIRC/x64
