implemented basics of framework

--- a/SampleIRC/Client/Client.vcxproj
+++ b/SampleIRC/Client/Client.vcxproj
@@ -143,11 +143,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\client.cpp" />
+    <ClCompile Include="src\Client.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="inc\client.h" />
+    <ClInclude Include="inc\Client.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
