--- a/SampleIRC/Client/Client.vcxproj
+++ b/SampleIRC/Client/Client.vcxproj
@@ -72,19 +72,19 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ExternalIncludePath>$(ExternalIncludePath)</ExternalIncludePath>
-    <IncludePath>D:\Repozytoria\C++\Libs\boost_1_80_0_msvc;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Repozytoria\C++\SampleIRC\SampleIRC;D:\Repozytoria\C++\SampleIRC\SampleIRC\Client\inc;D:\Repozytoria\C++\Libs\boost_1_80_0_msvc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ExternalIncludePath>$(ExternalIncludePath)</ExternalIncludePath>
-    <IncludePath>D:\Repozytoria\C++\Libs\boost_1_80_0_msvc;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Repozytoria\C++\SampleIRC\SampleIRC;D:\Repozytoria\C++\SampleIRC\SampleIRC\Client\inc;D:\Repozytoria\C++\Libs\boost_1_80_0_msvc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ExternalIncludePath>$(ExternalIncludePath)</ExternalIncludePath>
-    <IncludePath>D:\Repozytoria\C++\Libs\boost_1_80_0_msvc;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Repozytoria\C++\SampleIRC\SampleIRC;D:\Repozytoria\C++\SampleIRC\SampleIRC\Client\inc;D:\Repozytoria\C++\Libs\boost_1_80_0_msvc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ExternalIncludePath>$(ExternalIncludePath)</ExternalIncludePath>
-    <IncludePath>D:\Repozytoria\C++\Libs\boost_1_80_0_msvc;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Repozytoria\C++\SampleIRC\SampleIRC;D:\Repozytoria\C++\SampleIRC\SampleIRC\Client\inc;D:\Repozytoria\C++\Libs\boost_1_80_0_msvc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -92,6 +92,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -106,6 +107,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -120,6 +122,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -134,6 +137,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
