--- a/SampleIRC/Server/Server.vcxproj
+++ b/SampleIRC/Server/Server.vcxproj
@@ -79,19 +79,19 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ExternalIncludePath>$(ExternalIncludePath)</ExternalIncludePath>
-    <IncludePath>D:\Repozytoria\C++\Libs\boost_1_80_0_msvc;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Repozytoria\C++\SampleIRC\SampleIRC\Server\inc;D:\Repozytoria\C++\SampleIRC\SampleIRC;D:\Repozytoria\C++\Libs\boost_1_80_0_msvc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ExternalIncludePath>$(ExternalIncludePath)</ExternalIncludePath>
-    <IncludePath>D:\Repozytoria\C++\Libs\boost_1_80_0_msvc;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Repozytoria\C++\SampleIRC\SampleIRC\Server\inc;D:\Repozytoria\C++\SampleIRC\SampleIRC;D:\Repozytoria\C++\Libs\boost_1_80_0_msvc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ExternalIncludePath>$(ExternalIncludePath)</ExternalIncludePath>
-    <IncludePath>D:\Repozytoria\C++\Libs\boost_1_80_0_msvc;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Repozytoria\C++\SampleIRC\SampleIRC\Server\inc;D:\Repozytoria\C++\SampleIRC\SampleIRC;D:\Repozytoria\C++\Libs\boost_1_80_0_msvc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ExternalIncludePath>$(ExternalIncludePath)</ExternalIncludePath>
-    <IncludePath>D:\Repozytoria\C++\Libs\boost_1_80_0_msvc;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Repozytoria\C++\SampleIRC\SampleIRC\Server\inc;D:\Repozytoria\C++\SampleIRC\SampleIRC;D:\Repozytoria\C++\Libs\boost_1_80_0_msvc;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -99,6 +99,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -113,6 +114,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -127,6 +129,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -141,6 +144,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
