--- a/SampleIRC/Framework/Framework.vcxproj.filters
+++ b/SampleIRC/Framework/Framework.vcxproj.filters
@@ -33,10 +33,8 @@
     <ClInclude Include="Client.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="dummyMain.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+    <ClInclude Include="olc_net.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
