--- a/SampleIRC/Framework/Framework.vcxproj
+++ b/SampleIRC/Framework/Framework.vcxproj
@@ -23,6 +23,7 @@
     <ClInclude Include="Common.h" />
     <ClInclude Include="Connection.h" />
     <ClInclude Include="Message.h" />
+    <ClInclude Include="MessageTypes.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="ThreadSafeQueue.h" />
   </ItemGroup>
