--- a/SampleIRC/Framework/Framework.vcxproj.filters
+++ b/SampleIRC/Framework/Framework.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClInclude Include="Client.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MessageTypes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
