implemented IRCLoadClient class

--- a/SampleIRC/Client/Client.vcxproj
+++ b/SampleIRC/Client/Client.vcxproj
@@ -148,10 +148,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Client.cpp" />
+    <ClCompile Include="src\LoadTestClient.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\Client.h" />
+    <ClInclude Include="inc\LoadTestClient.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
