--- a/SampleIRC/Client/Client.vcxproj.filters
+++ b/SampleIRC/Client/Client.vcxproj.filters
@@ -21,10 +21,16 @@
     <ClCompile Include="src\Client.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\LoadTestClient.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\Client.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\LoadTestClient.h">
+      <Filter>Resource Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
